// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BrandThemeProvider Colors 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#00B0FF",
      }
    }
  >
    Primary color
  </Text>
  <Text
    style={
      Object {
        "color": "#FAFAFA",
      }
    }
  >
    Gray extra
  </Text>
  <Text
    style={
      Object {
        "color": "#ECEFF1",
      }
    }
  >
    Gray light
  </Text>
  <Text
    style={
      Object {
        "color": "#90A4AE",
      }
    }
  >
    Gray medium
  </Text>
  <Text
    style={
      Object {
        "color": "#546E7A",
      }
    }
  >
    Gray dark
  </Text>
  <Text
    style={
      Object {
        "color": "#F73F52",
      }
    }
  >
    Negative
  </Text>
  <Text
    style={
      Object {
        "color": "#3EC483",
      }
    }
  >
    Positive
  </Text>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
      }
    }
  >
    White
  </Text>
  <Text
    style={
      Object {
        "color": "#14171A",
      }
    }
  >
    Black
  </Text>
  <Text
    style={
      Object {
        "color": "#FFE100",
      }
    }
  >
    Battle
  </Text>
</View>
`;

exports[`Storyshots BrandThemeProvider Radius 1`] = `
<View
  style={
    Object {
      "borderRadius": 32,
      "borderWidth": 1,
      "padding": 8,
    }
  }
>
  <Text>
    Button
  </Text>
</View>
`;

exports[`Storyshots BrandThemeProvider Spacing 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "borderWidth": 1,
        },
        Object {
          "padding": 8,
        },
      ]
    }
  >
    Tiny
  </Text>
  <Text
    style={
      Array [
        Object {
          "borderWidth": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    Small
  </Text>
  <Text
    style={
      Array [
        Object {
          "borderWidth": 1,
        },
        Object {
          "padding": 24,
        },
      ]
    }
  >
    Base
  </Text>
  <Text
    style={
      Array [
        Object {
          "borderWidth": 1,
        },
        Object {
          "padding": 48,
        },
      ]
    }
  >
    Large
  </Text>
</View>
`;
